feat:  QT任务调度表字段修订，修改字段名称并添加新策略以增强任务调度功能

--- a/pdm/eas.pdma.json
+++ b/pdm/eas.pdma.json
@@ -4,7 +4,7 @@
   "avatar": "",
   "version": "4.9.4",
   "createdTime": "2025-5-31 18:54:43",
-  "updatedTime": "2026-2-10 19:42:57",
+  "updatedTime": "2026-2-10 19:55:54",
   "dbConns": [],
   "profile": {
     "default": {
@@ -22360,7 +22360,7 @@
           "id": "2E27D572-FDA0-43E2-9DB2-44BDFEC8C55F"
         },
         {
-          "defKey": "misfire_policy",
+          "defKey": "policy_misfire",
           "defName": "过期策略 0:放弃执行 1:立即执行 2:全部执行",
           "comment": "",
           "type": "",
@@ -22376,6 +22376,42 @@
           "extProps": {},
           "domain": "1B3F3434-1CE8-4D13-A4C3-CDAE3CDF0498",
           "id": "5F3E2E95-C51A-4127-9126-00839660953A"
+        },
+        {
+          "defKey": "policy_error",
+          "defName": "失败策略 0:默认 1:自动暂停",
+          "comment": "",
+          "type": "",
+          "len": "",
+          "scale": "",
+          "primaryKey": false,
+          "notNull": false,
+          "autoIncrement": false,
+          "defaultValue": "",
+          "hideInGraph": false,
+          "refDict": "",
+          "baseType": "566FB128-DBDE-4D78-9260-24C96D09CFE0",
+          "extProps": {},
+          "domain": "590D8569-6946-4A9F-954F-FBA9A1988143",
+          "id": "E956DA58-7268-4AE5-9A7B-A94C62A1EBE8"
+        },
+        {
+          "defKey": "policy_rcd",
+          "defName": "日志策略 0:全部 1:仅异常 2:不记录",
+          "comment": "",
+          "type": "",
+          "len": "",
+          "scale": "",
+          "primaryKey": false,
+          "notNull": false,
+          "autoIncrement": false,
+          "defaultValue": "",
+          "hideInGraph": false,
+          "refDict": "",
+          "baseType": "566FB128-DBDE-4D78-9260-24C96D09CFE0",
+          "extProps": {},
+          "domain": "590D8569-6946-4A9F-954F-FBA9A1988143",
+          "id": "DE56C750-DC07-44EA-BFC4-192E3C019E5A"
         },
         {
           "defKey": "expire_time",
@@ -22396,8 +22432,62 @@
           "id": "E1F4CE97-C1E1-447E-A2BC-93336B740F7F"
         },
         {
+          "defKey": "last_exec_status",
+          "defName": "上次状态 0:成功 1:异常",
+          "comment": "",
+          "type": "",
+          "len": "",
+          "scale": "",
+          "primaryKey": false,
+          "notNull": false,
+          "autoIncrement": false,
+          "defaultValue": "",
+          "hideInGraph": false,
+          "refDict": "",
+          "baseType": "03F05E70-3F80-47EE-AA1A-9348591BD47D",
+          "extProps": {},
+          "domain": "1B3F3434-1CE8-4D13-A4C3-CDAE3CDF0498",
+          "id": "7240CFA7-D6EE-4254-A96E-029AFA19E658"
+        },
+        {
+          "defKey": "last_start_time",
+          "defName": "上次开始时间",
+          "comment": "",
+          "type": "",
+          "len": "",
+          "scale": "",
+          "primaryKey": false,
+          "notNull": false,
+          "autoIncrement": false,
+          "defaultValue": "",
+          "hideInGraph": false,
+          "refDict": "",
+          "baseType": "C89F4D46-7F8C-4F81-9C1C-64094A0027E5",
+          "extProps": {},
+          "domain": "0C248E7A-4D9E-4356-9584-9A274C88D86B",
+          "id": "C4CED3B5-A9A2-451C-B338-9DDF3E76FD11"
+        },
+        {
+          "defKey": "last_end_time",
+          "defName": "上次结束时间",
+          "comment": "",
+          "type": "",
+          "len": "",
+          "scale": "",
+          "primaryKey": false,
+          "notNull": false,
+          "autoIncrement": false,
+          "defaultValue": "",
+          "hideInGraph": false,
+          "refDict": "",
+          "baseType": "C89F4D46-7F8C-4F81-9C1C-64094A0027E5",
+          "extProps": {},
+          "domain": "0C248E7A-4D9E-4356-9584-9A274C88D86B",
+          "id": "F6713B16-75F3-4CA8-803F-6322F6E61D2E"
+        },
+        {
           "defKey": "status",
-          "defName": "0:正常 1:暂停",
+          "defName": "0:正常 1:暂停 2:暂停(异常)",
           "comment": "",
           "type": "",
           "len": "",
