--- a/src/main/resources/views/webconsole/package.json
+++ b/src/main/resources/views/webconsole/package.json
@@ -18,6 +18,8 @@
     "@vue-office/excel": "^1.7.14",
     "axios": "1.12.0",
     "bootstrap-icons": "^1.11.3",
+    "cron-parser": "^5.5.0",
+    "cronstrue": "^3.12.0",
     "element-plus": "2.11.3",
     "hash-wasm": "^4.12.0",
     "highlight.js": "^11.11.1",
