feat: 集成Flyway数据库迁移方案，配置Flyway迁移策略和初始化SQL脚本

--- a/pom.xml
+++ b/pom.xml
@@ -269,6 +269,20 @@
             <artifactId>caffeine</artifactId>
         </dependency>
 
+
+        <!-- Flyway数据库备份与迁移 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-flyway</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-mysql</artifactId>
+        </dependency>
+
+
+
     </dependencies>
 
     <build>
