--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,5 @@
 spring:
+
   profiles:
     active: dev
 
@@ -17,15 +18,15 @@ spring:
       enabled: true
 
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.10.202:3306/endpoint_analysis_service_test?serverTimezone=Asia/Shanghai&allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
-    username: root
-    password: root
-
     #driver-class-name: com.mysql.cj.jdbc.Driver
-    #url: jdbc:mysql://127.0.0.1:3306/endpoint_analysis_service?serverTimezone=Asia/Shanghai&allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    #url: jdbc:mysql://192.168.10.202:3306/endpoint_analysis_service_test?serverTimezone=Asia/Shanghai&allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     #username: root
     #password: root
+
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/endpoint_analysis_service?serverTimezone=Asia/Shanghai&allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    username: root
+    password: root
 
     #driver-class-name: org.h2.Driver
     #url: jdbc:h2:tcp://127.0.0.1:59000/./EndpointAnalysisService
@@ -65,6 +66,13 @@ spring:
     job-store-type: jdbc
     jdbc:
       initialize-schema: never
+
+  flyway:
+    enabled: true
+    locations: classpath:sql/automatic
+    baseline-on-migrate: true
+    baseline-version: 1.5.23
+    baseline-description: "Baseline1.5W"
 
 server:
   port: 27500
@@ -108,13 +116,15 @@ module-drive:
 
   #签名有效时间(秒)
   ttl: 3600
-#logging:
-#  level:
-#    org.springframework.boot.context.logging: INFO
-#    # 开启 Spring Bean 初始化的详细日志
-#    org.springframework.beans.factory.support.DefaultListableBeanFactory: DEBUG
 
 #审计模块配置
 audit:
   #是否记录系统错误记录
   record-error-rcd: true
+
+
+#logging:
+#  level:
+#    org.springframework.boot.context.logging: INFO
+#    # 开启 Spring Bean 初始化的详细日志
+#    org.springframework.beans.factory.support.DefaultListableBeanFactory: DEBUG
