--- a/pom.xml
+++ b/pom.xml
@@ -287,6 +287,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-session-jdbc</artifactId>
+        </dependency>
+
 
     </dependencies>
 
