--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -75,6 +75,13 @@ spring:
     baseline-version: 1.5.23
     baseline-description: "Baseline1.5W"
 
+
+  session:
+    timeout: 30m #Session 超时时间
+    jdbc:
+      table-name: auth_spring_session
+      initialize-schema: always
+
 server:
   port: 27500
 
