feat: 更新用户组和权限表结构，添加数据库升级脚本以支持新表auth_group和auth_permission的创建与数据迁移，同时调整MaintainService以注释掉历史一致性校验逻辑

--- a/pdm/eas.pdma.json
+++ b/pdm/eas.pdma.json
@@ -4,7 +4,7 @@
   "avatar": "",
   "version": "4.9.4",
   "createdTime": "2025-5-31 18:54:43",
-  "updatedTime": "2026-2-10 20:01:28",
+  "updatedTime": "2026-2-14 16:07:12",
   "dbConns": [],
   "profile": {
     "default": {
@@ -1789,7 +1789,7 @@
           "codeRoot": ""
         }
       },
-      "defKey": "core_group",
+      "defKey": "auth_group",
       "defName": "用户组",
       "comment": "",
       "properties": {
@@ -1941,7 +1941,7 @@
           "scale": "",
           "primaryKey": true,
           "notNull": true,
-          "autoIncrement": true,
+          "autoIncrement": false,
           "defaultValue": "",
           "hideInGraph": false,
           "refDict": "",
@@ -1964,8 +1964,8 @@
           "defKey": "code",
           "defName": "组标识，如：admin、developer等",
           "comment": "",
-          "type": "VARCHAR",
-          "len": 50,
+          "type": "",
+          "len": "",
           "scale": "",
           "primaryKey": false,
           "notNull": true,
@@ -1973,9 +1973,9 @@
           "defaultValue": "",
           "hideInGraph": false,
           "refDict": "",
-          "baseType": "",
+          "baseType": "566FB128-DBDE-4D78-9260-24C96D09CFE0",
           "extProps": {},
-          "domain": "",
+          "domain": "E8BE6EBB-CA13-475A-BBEE-6E54CB5815E5",
           "id": "D771279F-3F1A-4E96-94AD-E5824CBD74FB",
           "attr1": "",
           "attr2": "",
@@ -1992,8 +1992,8 @@
           "defKey": "name",
           "defName": "组名称，如：管理员组、开发者组等",
           "comment": "",
-          "type": "VARCHAR",
-          "len": 50,
+          "type": "",
+          "len": "",
           "scale": "",
           "primaryKey": false,
           "notNull": true,
@@ -2001,9 +2001,9 @@
           "defaultValue": "",
           "hideInGraph": false,
           "refDict": "",
-          "baseType": "",
+          "baseType": "566FB128-DBDE-4D78-9260-24C96D09CFE0",
           "extProps": {},
-          "domain": "",
+          "domain": "E8BE6EBB-CA13-475A-BBEE-6E54CB5815E5",
           "id": "0F0BD072-BBD9-4ACD-99E2-0C19B2412F05",
           "attr1": "",
           "attr2": "",
@@ -2017,11 +2017,11 @@
           "uiHint": "642D2E0A-8846-4549-BE56-8C0473F26EDE"
         },
         {
-          "defKey": "description",
+          "defKey": "remark",
           "defName": "组描述",
           "comment": "",
-          "type": "VARCHAR",
-          "len": 200,
+          "type": "",
+          "len": "",
           "scale": "",
           "primaryKey": false,
           "notNull": false,
@@ -2029,9 +2029,9 @@
           "defaultValue": "",
           "hideInGraph": false,
           "refDict": "",
-          "baseType": "",
+          "baseType": "B283AF71-114C-45F0-AAA1-FE89710DF493",
           "extProps": {},
-          "domain": "",
+          "domain": "932160CF-A8A5-421F-833D-4375EDDF3F3C",
           "id": "2BB17DAE-7618-4A55-8EC0-34B5C5C98380",
           "attr1": "",
           "attr2": "",
@@ -2045,38 +2045,10 @@
           "uiHint": "642D2E0A-8846-4549-BE56-8C0473F26EDE"
         },
         {
-          "defKey": "is_system",
-          "defName": "是否系统内置组（内置组不可删除）",
-          "comment": "",
-          "type": "BIT",
-          "len": 1,
-          "scale": "",
-          "primaryKey": false,
-          "notNull": true,
-          "autoIncrement": false,
-          "defaultValue": "",
-          "hideInGraph": false,
-          "refDict": "",
-          "baseType": "",
-          "extProps": {},
-          "domain": "",
-          "id": "CC1DECD9-83E7-4A97-84DF-41DC443DF213",
-          "attr1": "",
-          "attr2": "",
-          "attr3": "",
-          "attr4": "",
-          "attr5": "",
-          "attr6": "",
-          "attr7": "",
-          "attr8": "",
-          "attr9": "",
-          "uiHint": "642D2E0A-8846-4549-BE56-8C0473F26EDE"
-        },
-        {
           "defKey": "status",
-          "defName": "组状态：0-禁用，1-启用",
+          "defName": "组状态:0:禁用，1:启用",
           "comment": "",
-          "type": "INT",
+          "type": "",
           "len": "",
           "scale": "",
           "primaryKey": false,
@@ -2085,9 +2057,9 @@
           "defaultValue": "",
           "hideInGraph": false,
           "refDict": "",
-          "baseType": "",
+          "baseType": "03F05E70-3F80-47EE-AA1A-9348591BD47D",
           "extProps": {},
-          "domain": "",
+          "domain": "1B3F3434-1CE8-4D13-A4C3-CDAE3CDF0498",
           "id": "BDA2D743-10E9-4C45-9471-6EB9D9444E90",
           "attr1": "",
           "attr2": "",
@@ -2101,10 +2073,10 @@
           "uiHint": "642D2E0A-8846-4549-BE56-8C0473F26EDE"
         },
         {
-          "defKey": "sort_order",
+          "defKey": "seq",
           "defName": "排序号",
           "comment": "",
-          "type": "INT",
+          "type": "",
           "len": "",
           "scale": "",
           "primaryKey": false,
@@ -2113,9 +2085,9 @@
           "defaultValue": "",
           "hideInGraph": false,
           "refDict": "",
-          "baseType": "",
+          "baseType": "D6F266BC-0AF9-4E75-BD79-56B34FA0191F",
           "extProps": {},
-          "domain": "",
+          "domain": "D209B1E4-22F0-448B-B944-33EC0844DDFC",
           "id": "7D88B3DE-07AF-403A-8D2A-45F06D26EB21",
           "attr1": "",
           "attr2": "",
@@ -2129,50 +2101,22 @@
           "uiHint": "642D2E0A-8846-4549-BE56-8C0473F26EDE"
         },
         {
-          "defKey": "create_user_id",
-          "defName": "创建人ID",
+          "defKey": "is_system",
+          "defName": "系统内置组 0:否 1:是",
           "comment": "",
           "type": "",
           "len": "",
           "scale": "",
           "primaryKey": false,
-          "notNull": false,
+          "notNull": true,
           "autoIncrement": false,
           "defaultValue": "",
           "hideInGraph": false,
           "refDict": "",
-          "baseType": "D4F3414B-7780-49DE-979F-E697B65AE78D",
+          "baseType": "03F05E70-3F80-47EE-AA1A-9348591BD47D",
           "extProps": {},
-          "domain": "3F9E08C8-96C1-4FD0-9F00-BEF0DB7FB7B9",
-          "id": "E9C496C6-00E5-4BFE-953D-44CFF7E99109",
-          "attr1": "",
-          "attr2": "",
-          "attr3": "",
-          "attr4": "",
-          "attr5": "",
-          "attr6": "",
-          "attr7": "",
-          "attr8": "",
-          "attr9": "",
-          "uiHint": "642D2E0A-8846-4549-BE56-8C0473F26EDE"
-        },
-        {
-          "defKey": "update_user_id",
-          "defName": "修改人ID",
-          "comment": "",
-          "type": "",
-          "len": "",
-          "scale": "",
-          "primaryKey": false,
-          "notNull": false,
-          "autoIncrement": false,
-          "defaultValue": "",
-          "hideInGraph": false,
-          "refDict": "",
-          "baseType": "D4F3414B-7780-49DE-979F-E697B65AE78D",
-          "extProps": {},
-          "domain": "3F9E08C8-96C1-4FD0-9F00-BEF0DB7FB7B9",
-          "id": "77D1F595-8799-4166-BE49-8D92A4071933",
+          "domain": "1B3F3434-1CE8-4D13-A4C3-CDAE3CDF0498",
+          "id": "CC1DECD9-83E7-4A97-84DF-41DC443DF213",
           "attr1": "",
           "attr2": "",
           "attr3": "",
@@ -2188,7 +2132,7 @@
           "defKey": "create_time",
           "defName": "创建时间",
           "comment": "",
-          "type": "DATETIME",
+          "type": "",
           "len": "",
           "scale": "",
           "primaryKey": false,
@@ -2197,9 +2141,9 @@
           "defaultValue": "",
           "hideInGraph": false,
           "refDict": "",
-          "baseType": "",
+          "baseType": "C89F4D46-7F8C-4F81-9C1C-64094A0027E5",
           "extProps": {},
-          "domain": "",
+          "domain": "0C248E7A-4D9E-4356-9584-9A274C88D86B",
           "id": "2FDC8666-353E-45F4-8C8E-F90BC829BCC6",
           "attr1": "",
           "attr2": "",
@@ -2213,10 +2157,10 @@
           "uiHint": "642D2E0A-8846-4549-BE56-8C0473F26EDE"
         },
         {
-          "defKey": "update_time",
-          "defName": "修改时间",
+          "defKey": "creator_id",
+          "defName": "创建人ID",
           "comment": "",
-          "type": "DATETIME",
+          "type": "",
           "len": "",
           "scale": "",
           "primaryKey": false,
@@ -2225,9 +2169,27 @@
           "defaultValue": "",
           "hideInGraph": false,
           "refDict": "",
-          "baseType": "",
+          "baseType": "D4F3414B-7780-49DE-979F-E697B65AE78D",
           "extProps": {},
-          "domain": "",
+          "domain": "6AF16962-271B-4EAD-A807-705E81F24B8C",
+          "id": "59FB3CBC-EBC0-4BF3-863E-85E3EA8EF82B"
+        },
+        {
+          "defKey": "update_time",
+          "defName": "修改时间",
+          "comment": "",
+          "type": "",
+          "len": "",
+          "scale": "",
+          "primaryKey": false,
+          "notNull": true,
+          "autoIncrement": false,
+          "defaultValue": "",
+          "hideInGraph": false,
+          "refDict": "",
+          "baseType": "C89F4D46-7F8C-4F81-9C1C-64094A0027E5",
+          "extProps": {},
+          "domain": "0C248E7A-4D9E-4356-9584-9A274C88D86B",
           "id": "8E66DE5D-CC1D-437E-8B9A-5F52F97152B3",
           "attr1": "",
           "attr2": "",
@@ -2239,6 +2201,24 @@
           "attr8": "",
           "attr9": "",
           "uiHint": "642D2E0A-8846-4549-BE56-8C0473F26EDE"
+        },
+        {
+          "defKey": "updater_id",
+          "defName": "修改人ID",
+          "comment": "",
+          "type": "",
+          "len": "",
+          "scale": "",
+          "primaryKey": false,
+          "notNull": true,
+          "autoIncrement": false,
+          "defaultValue": "",
+          "hideInGraph": false,
+          "refDict": "",
+          "baseType": "D4F3414B-7780-49DE-979F-E697B65AE78D",
+          "extProps": {},
+          "domain": "6AF16962-271B-4EAD-A807-705E81F24B8C",
+          "id": "BD3AB036-7D1E-4DB5-8601-4EC64088122F"
         }
       ],
       "correlations": [],
@@ -2282,8 +2262,8 @@
           "codeRoot": ""
         }
       },
-      "defKey": "core_permission",
-      "defName": "拥有此权限的用户组",
+      "defKey": "auth_permission",
+      "defName": "权限码",
       "comment": "",
       "properties": {
         "partitioned by": "(date string)",
@@ -2434,7 +2414,7 @@
           "scale": "",
           "primaryKey": true,
           "notNull": true,
-          "autoIncrement": true,
+          "autoIncrement": false,
           "defaultValue": "",
           "hideInGraph": false,
           "refDict": "",
@@ -2454,39 +2434,11 @@
           "uiHint": "642D2E0A-8846-4549-BE56-8C0473F26EDE"
         },
         {
-          "defKey": "code",
-          "defName": "权限标识，如：system:user:view",
-          "comment": "",
-          "type": "VARCHAR",
-          "len": 100,
-          "scale": "",
-          "primaryKey": false,
-          "notNull": true,
-          "autoIncrement": false,
-          "defaultValue": "",
-          "hideInGraph": false,
-          "refDict": "",
-          "baseType": "",
-          "extProps": {},
-          "domain": "",
-          "id": "A34C19A0-8B04-4F42-A7FD-2DD31D1FA37E",
-          "attr1": "",
-          "attr2": "",
-          "attr3": "",
-          "attr4": "",
-          "attr5": "",
-          "attr6": "",
-          "attr7": "",
-          "attr8": "",
-          "attr9": "",
-          "uiHint": "642D2E0A-8846-4549-BE56-8C0473F26EDE"
-        },
-        {
           "defKey": "name",
           "defName": "权限名称，如：查看用户",
           "comment": "",
-          "type": "VARCHAR",
-          "len": 50,
+          "type": "",
+          "len": "",
           "scale": "",
           "primaryKey": false,
           "notNull": true,
@@ -2494,9 +2446,9 @@
           "defaultValue": "",
           "hideInGraph": false,
           "refDict": "",
-          "baseType": "",
+          "baseType": "566FB128-DBDE-4D78-9260-24C96D09CFE0",
           "extProps": {},
-          "domain": "",
+          "domain": "E8BE6EBB-CA13-475A-BBEE-6E54CB5815E5",
           "id": "ABFADCB9-794E-4D34-BBC8-B6174525F8D3",
           "attr1": "",
           "attr2": "",
@@ -2510,11 +2462,39 @@
           "uiHint": "642D2E0A-8846-4549-BE56-8C0473F26EDE"
         },
         {
-          "defKey": "description",
+          "defKey": "code",
+          "defName": "权限标识，如：system:user:view",
+          "comment": "",
+          "type": "",
+          "len": "",
+          "scale": "",
+          "primaryKey": false,
+          "notNull": true,
+          "autoIncrement": false,
+          "defaultValue": "",
+          "hideInGraph": false,
+          "refDict": "",
+          "baseType": "566FB128-DBDE-4D78-9260-24C96D09CFE0",
+          "extProps": {},
+          "domain": "E8BE6EBB-CA13-475A-BBEE-6E54CB5815E5",
+          "id": "A34C19A0-8B04-4F42-A7FD-2DD31D1FA37E",
+          "attr1": "",
+          "attr2": "",
+          "attr3": "",
+          "attr4": "",
+          "attr5": "",
+          "attr6": "",
+          "attr7": "",
+          "attr8": "",
+          "attr9": "",
+          "uiHint": "642D2E0A-8846-4549-BE56-8C0473F26EDE"
+        },
+        {
+          "defKey": "remark",
           "defName": "权限描述",
           "comment": "",
-          "type": "VARCHAR",
-          "len": 200,
+          "type": "",
+          "len": "",
           "scale": "",
           "primaryKey": false,
           "notNull": false,
@@ -2522,9 +2502,9 @@
           "defaultValue": "",
           "hideInGraph": false,
           "refDict": "",
-          "baseType": "",
+          "baseType": "B283AF71-114C-45F0-AAA1-FE89710DF493",
           "extProps": {},
-          "domain": "",
+          "domain": "932160CF-A8A5-421F-833D-4375EDDF3F3C",
           "id": "8519374D-88DA-4406-BDC4-3A87DF06EEA6",
           "attr1": "",
           "attr2": "",
@@ -2538,10 +2518,10 @@
           "uiHint": "642D2E0A-8846-4549-BE56-8C0473F26EDE"
         },
         {
-          "defKey": "sort_order",
+          "defKey": "seq",
           "defName": "排序号",
           "comment": "",
-          "type": "INT",
+          "type": "",
           "len": "",
           "scale": "",
           "primaryKey": false,
@@ -2550,9 +2530,9 @@
           "defaultValue": "",
           "hideInGraph": false,
           "refDict": "",
-          "baseType": "",
+          "baseType": "D6F266BC-0AF9-4E75-BD79-56B34FA0191F",
           "extProps": {},
-          "domain": "",
+          "domain": "D209B1E4-22F0-448B-B944-33EC0844DDFC",
           "id": "D04C8C6F-003D-4108-9795-F7850AF5FA54",
           "attr1": "",
           "attr2": "",
@@ -2567,9 +2547,9 @@
         },
         {
           "defKey": "is_system",
-          "defName": "是否系统权限 0:非系统权限 1:系统权限",
+          "defName": "系统内置权限 0:否 1:是",
           "comment": "",
-          "type": "INT",
+          "type": "",
           "len": "",
           "scale": "",
           "primaryKey": false,
@@ -2578,9 +2558,9 @@
           "defaultValue": "",
           "hideInGraph": false,
           "refDict": "",
-          "baseType": "",
+          "baseType": "03F05E70-3F80-47EE-AA1A-9348591BD47D",
           "extProps": {},
-          "domain": "",
+          "domain": "1B3F3434-1CE8-4D13-A4C3-CDAE3CDF0498",
           "id": "DD9FD388-916E-4328-B807-A358301C612D",
           "attr1": "",
           "attr2": "",
@@ -2597,7 +2577,7 @@
           "defKey": "create_time",
           "defName": "创建时间",
           "comment": "",
-          "type": "DATETIME",
+          "type": "",
           "len": "",
           "scale": "",
           "primaryKey": false,
@@ -2606,9 +2586,9 @@
           "defaultValue": "",
           "hideInGraph": false,
           "refDict": "",
-          "baseType": "",
+          "baseType": "C89F4D46-7F8C-4F81-9C1C-64094A0027E5",
           "extProps": {},
-          "domain": "",
+          "domain": "0C248E7A-4D9E-4356-9584-9A274C88D86B",
           "id": "C65142F5-7024-4F4A-90E5-B21235B8D831",
           "attr1": "",
           "attr2": "",
@@ -2622,10 +2602,10 @@
           "uiHint": "642D2E0A-8846-4549-BE56-8C0473F26EDE"
         },
         {
-          "defKey": "update_time",
-          "defName": "修改时间",
+          "defKey": "creator_id",
+          "defName": "创建人",
           "comment": "",
-          "type": "DATETIME",
+          "type": "",
           "len": "",
           "scale": "",
           "primaryKey": false,
@@ -2634,9 +2614,27 @@
           "defaultValue": "",
           "hideInGraph": false,
           "refDict": "",
-          "baseType": "",
+          "baseType": "D4F3414B-7780-49DE-979F-E697B65AE78D",
           "extProps": {},
-          "domain": "",
+          "domain": "6AF16962-271B-4EAD-A807-705E81F24B8C",
+          "id": "1743832A-E546-4B37-9B21-53D5ED3CCDC9"
+        },
+        {
+          "defKey": "update_time",
+          "defName": "修改时间",
+          "comment": "",
+          "type": "",
+          "len": "",
+          "scale": "",
+          "primaryKey": false,
+          "notNull": true,
+          "autoIncrement": false,
+          "defaultValue": "",
+          "hideInGraph": false,
+          "refDict": "",
+          "baseType": "C89F4D46-7F8C-4F81-9C1C-64094A0027E5",
+          "extProps": {},
+          "domain": "0C248E7A-4D9E-4356-9584-9A274C88D86B",
           "id": "CD096589-2DFC-4F5C-8260-A109E1CD8EB4",
           "attr1": "",
           "attr2": "",
@@ -2648,6 +2646,24 @@
           "attr8": "",
           "attr9": "",
           "uiHint": "642D2E0A-8846-4549-BE56-8C0473F26EDE"
+        },
+        {
+          "defKey": "updater_id",
+          "defName": "修改人",
+          "comment": "",
+          "type": "",
+          "len": "",
+          "scale": "",
+          "primaryKey": false,
+          "notNull": true,
+          "autoIncrement": false,
+          "defaultValue": "",
+          "hideInGraph": false,
+          "refDict": "",
+          "baseType": "D4F3414B-7780-49DE-979F-E697B65AE78D",
+          "extProps": {},
+          "domain": "6AF16962-271B-4EAD-A807-705E81F24B8C",
+          "id": "CD64A61F-15D0-449B-BFCD-9D8981BC00AB"
         }
       ],
       "correlations": [],
@@ -24449,9 +24465,9 @@
         "806E39B2-9FDE-40C4-BBAC-9709891AB698",
         "0D4BE8D1-5C53-4745-9128-AF237F7CE7C6",
         "A1B23084-101D-4B9D-937E-3AD935567338",
+        "3E1F663D-6E54-4876-8B5D-EFE4F3A0DA77",
         "064D3049-B6C4-4878-B6C6-61D2B7BC67BE",
         "9E8131EC-5043-454C-93E2-D111BDF1AE43",
-        "3E1F663D-6E54-4876-8B5D-EFE4F3A0DA77",
         "63318AE1-50A8-4347-9C18-B04622B4205D",
         "B24547A9-421B-4FE5-8EA5-2B51B3176F96",
         "B2D99468-53E1-4B36-B422-4D4F36504950",
