--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -45,7 +45,7 @@ spring:
     show-sql: false
     hibernate:
       #ddl-auto: update
-      ddl-auto: validate
+      ddl-auto: none
     properties:
       hibernate:
         format_sql: false
