refactor: 更新eas.pdma.json文件，修改权限和用户组相关字段名称，添加auth_user_group和auth_group_permission表的SQL迁移脚本，确保数据库结构一致性

--- a/pdm/eas.pdma.json
+++ b/pdm/eas.pdma.json
@@ -4,7 +4,7 @@
   "avatar": "",
   "version": "4.9.4",
   "createdTime": "2025-5-31 18:54:43",
-  "updatedTime": "2026-2-14 16:53:55",
+  "updatedTime": "2026-2-14 17:06:32",
   "dbConns": [],
   "profile": {
     "default": {
@@ -11964,8 +11964,8 @@
           "codeRoot": ""
         }
       },
-      "defKey": "core_group_permission",
-      "defName": "权限-用户组关联表",
+      "defKey": "auth_group_permission",
+      "defName": "GP表",
       "comment": "",
       "properties": {
         "partitioned by": "(date string)",
@@ -12109,7 +12109,7 @@
       "fields": [
         {
           "defKey": "group_id",
-          "defName": "",
+          "defName": "用户组ID",
           "comment": "",
           "type": "",
           "len": "",
@@ -12137,7 +12137,7 @@
         },
         {
           "defKey": "permission_id",
-          "defName": "",
+          "defName": "权限ID",
           "comment": "",
           "type": "",
           "len": "",
@@ -12181,6 +12181,218 @@
           "id": "F24E5F14-5A63-4F69-AD67-EF5476FF1868"
         }
       ],
+      "type": "P"
+    },
+    {
+      "id": "F930E47E-7D2E-4FAF-89DC-FEE0AB913477",
+      "env": {
+        "base": {
+          "nameSpace": "",
+          "codeRoot": ""
+        }
+      },
+      "defKey": "auth_user_group",
+      "defName": "UG表",
+      "comment": "",
+      "properties": {
+        "partitioned by": "(date string)",
+        "row format delimited": "",
+        "fields terminated by ','": "",
+        "collection items terminated by '-'": "",
+        "map keys terminated by ':'": "",
+        "store as textfile;": ""
+      },
+      "sysProps": {
+        "nameTemplate": "{defKey}[{defName}]"
+      },
+      "notes": {},
+      "headers": [
+        {
+          "refKey": "hideInGraph",
+          "hideInGraph": true,
+          "freeze": false
+        },
+        {
+          "refKey": "defKey",
+          "freeze": true,
+          "hideInGraph": false
+        },
+        {
+          "refKey": "defName",
+          "freeze": true,
+          "hideInGraph": false
+        },
+        {
+          "refKey": "primaryKey",
+          "freeze": false,
+          "hideInGraph": false
+        },
+        {
+          "refKey": "notNull",
+          "freeze": false,
+          "hideInGraph": true
+        },
+        {
+          "refKey": "autoIncrement",
+          "freeze": false,
+          "hideInGraph": true
+        },
+        {
+          "refKey": "domain",
+          "freeze": false,
+          "hideInGraph": true
+        },
+        {
+          "refKey": "type",
+          "freeze": false,
+          "hideInGraph": false
+        },
+        {
+          "refKey": "len",
+          "freeze": false,
+          "hideInGraph": false
+        },
+        {
+          "refKey": "scale",
+          "freeze": false,
+          "hideInGraph": false
+        },
+        {
+          "refKey": "comment",
+          "freeze": false,
+          "hideInGraph": true
+        },
+        {
+          "refKey": "refDict",
+          "freeze": false,
+          "hideInGraph": true
+        },
+        {
+          "refKey": "defaultValue",
+          "freeze": false,
+          "hideInGraph": true
+        },
+        {
+          "refKey": "isStandard",
+          "freeze": false,
+          "hideInGraph": false
+        },
+        {
+          "refKey": "uiHint",
+          "freeze": false,
+          "hideInGraph": true
+        },
+        {
+          "refKey": "extProps",
+          "freeze": false,
+          "hideInGraph": true
+        },
+        {
+          "refKey": "attr1",
+          "freeze": false,
+          "hideInGraph": true
+        },
+        {
+          "refKey": "attr2",
+          "freeze": false,
+          "hideInGraph": true
+        },
+        {
+          "refKey": "attr3",
+          "freeze": false,
+          "hideInGraph": true
+        },
+        {
+          "refKey": "attr4",
+          "freeze": false,
+          "hideInGraph": true
+        },
+        {
+          "refKey": "attr5",
+          "freeze": false,
+          "hideInGraph": true
+        },
+        {
+          "refKey": "attr6",
+          "freeze": false,
+          "hideInGraph": true
+        },
+        {
+          "refKey": "attr7",
+          "freeze": false,
+          "hideInGraph": true
+        },
+        {
+          "refKey": "attr8",
+          "freeze": false,
+          "hideInGraph": true
+        },
+        {
+          "refKey": "attr9",
+          "freeze": false,
+          "hideInGraph": true
+        }
+      ],
+      "fields": [
+        {
+          "defKey": "user_id",
+          "defName": "用户ID",
+          "comment": "",
+          "type": "",
+          "len": "",
+          "scale": "",
+          "primaryKey": true,
+          "notNull": true,
+          "autoIncrement": false,
+          "defaultValue": "",
+          "hideInGraph": false,
+          "refDict": null,
+          "baseType": "D4F3414B-7780-49DE-979F-E697B65AE78D",
+          "extProps": {},
+          "domain": "3F9E08C8-96C1-4FD0-9F00-BEF0DB7FB7B9",
+          "id": "94DF21E4-340D-4D83-826D-94D11D35CF6D",
+          "attr1": "",
+          "attr2": "",
+          "attr3": "",
+          "attr4": "",
+          "attr5": "",
+          "attr6": "",
+          "attr7": "",
+          "attr8": "",
+          "attr9": "",
+          "uiHint": "642D2E0A-8846-4549-BE56-8C0473F26EDE"
+        },
+        {
+          "defKey": "group_id",
+          "defName": "用户组ID",
+          "comment": "",
+          "type": "",
+          "len": "",
+          "scale": "",
+          "primaryKey": true,
+          "notNull": true,
+          "autoIncrement": false,
+          "defaultValue": "",
+          "hideInGraph": false,
+          "refDict": null,
+          "baseType": "D4F3414B-7780-49DE-979F-E697B65AE78D",
+          "extProps": {},
+          "domain": "3F9E08C8-96C1-4FD0-9F00-BEF0DB7FB7B9",
+          "id": "16164FA1-D736-4364-86A7-6D85AFEA1455",
+          "attr1": "",
+          "attr2": "",
+          "attr3": "",
+          "attr4": "",
+          "attr5": "",
+          "attr6": "",
+          "attr7": "",
+          "attr8": "",
+          "attr9": "",
+          "uiHint": "642D2E0A-8846-4549-BE56-8C0473F26EDE"
+        }
+      ],
+      "correlations": [],
+      "indexes": [],
       "type": "P"
     },
     {
@@ -24466,6 +24678,7 @@
         "0D4BE8D1-5C53-4745-9128-AF237F7CE7C6",
         "A1B23084-101D-4B9D-937E-3AD935567338",
         "3E1F663D-6E54-4876-8B5D-EFE4F3A0DA77",
+        "F930E47E-7D2E-4FAF-89DC-FEE0AB913477",
         "064D3049-B6C4-4878-B6C6-61D2B7BC67BE",
         "9E8131EC-5043-454C-93E2-D111BDF1AE43",
         "63318AE1-50A8-4347-9C18-B04622B4205D",
